syntax = "proto3";

package snp.v1;
option go_package = ".;pb";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "site.proto";
import "common.proto";



message ProtoCustomerRepo {
  message ProtoCustomer {
    uint64 id = 1;
    string title = 2;
    string person = 3;
    string address = 4;
    string phone = 5;
    string email = 6;
    bool muted = 7;
    uint64 size_limit = 8;
    repeated ProtoSiteRepo.ProtoSite sites = 9;
  }
  repeated ProtoCustomer customers = 1;

  message UpdateRequest {
    google.protobuf.UInt64Value ID = 1;
    ProtoCustomerRepo.ProtoCustomer Customer = 2;
  }

  message SearchResponse {
    repeated ProtoCustomerRepo.ProtoCustomer data = 1;
    uint32 total_records = 2;
  }
}



service CustomerCrud {
  rpc CreateCustomer(ProtoCustomerRepo.ProtoCustomer) returns (ProtoCustomerRepo.ProtoCustomer);
  rpc GetListCustomer(google.protobuf.Empty) returns (stream ProtoCustomerRepo.ProtoCustomer);
  rpc GetOneCustomer(google.protobuf.UInt64Value) returns (ProtoCustomerRepo.ProtoCustomer);
  rpc UpdateCustomer(ProtoCustomerRepo.UpdateRequest) returns (ProtoCustomerRepo.ProtoCustomer);
  rpc DeleteCustomer(google.protobuf.UInt64Value) returns (google.protobuf.BoolValue);
  rpc SearchCustomer(SearchRequest) returns (ProtoCustomerRepo.SearchResponse);
}